--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
 <meta charset="UTF-8">
 <title>Hogwarts Birthday</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
 *{margin:0;padding:0;box-sizing:border-box}
 body{
@@ -11,251 +12,213 @@ body{
   font-family:'Georgia',serif;
   color:#fff;
   text-align:center;
-  overflow:hidden;
 }
 
 /* ================= MENU ================= */
 #menu{
   display:flex;
   flex-direction:column;
-  justify-content:flex-start;
   align-items:center;
-  gap:16px;
   padding-top:120px;
+  gap:18px;
 }
 
-/* ================= ANIMASI JUDUL ================= */
+/* JUDUL */
 .titleMenu{
   font-size:36px;
   font-weight:bold;
-  margin-bottom:12px;
+  display:flex;
+  gap:26px;
 }
 .titleMenu span{
   animation:colorCycle 4s infinite;
-  font-weight:bold;
-  display:inline-block;
 }
 @keyframes colorCycle{
-  0%{color:#ff3b3b;}      /* Merah Gryffindor */
-  25%{color:#4facff;}     /* Biru Ravenclaw */
-  50%{color:#ffd34a;}     /* Kuning Hufflepuff */
-  75%{color:#2aff7a;}     /* Hijau Slytherin */
-  100%{color:#ff3b3b;}
+  0%{color:#ff3b3b}
+  25%{color:#4facff}
+  50%{color:#ffd34a}
+  75%{color:#2aff7a}
+  100%{color:#ff3b3b}
 }
 
-/* ================= CAPTION MENU ================= */
+/* CAPTION MENU */
 .captionMenu{
+  max-width:520px;
   font-size:16px;
-  color:#fff;
-  opacity:0.9;
-  max-width:500px;
-  margin-bottom:40px;
+  opacity:.9;
+  margin-bottom:20px;
 }
 
-/* ================= HOUSE BUTTONS ================= */
-.house{
+/* BUTTON */
+.house,.specialBtn{
   padding:14px 38px;
   font-size:22px;
   border-radius:40px;
-  border:2px solid currentColor;
+  border:2px solid #fff;
   background:transparent;
   cursor:pointer;
 }
+.specialBtn{
+  margin-top:20px;
+  color:#fff;
+}
 
-/* ================= SLIDE & FOTO ================= */
-.slide{position:fixed;inset:0;display:none;}
-.slide.active{display:block;}
-.bg{position:absolute;inset:0;background:radial-gradient(circle at top,var(--main),#000 70%);opacity:.25;}
-.back{position:absolute;top:14px;left:14px;z-index:10;padding:8px 14px;border-radius:20px;border:1px solid #fff;background:#000;color:#fff;cursor:pointer;}
+/* ================= PAGE ================= */
+.page{position:fixed;inset:0;display:none}
+.page.active{display:block}
+.back{
+  position:fixed;
+  top:14px;left:14px;
+  padding:8px 14px;
+  border-radius:20px;
+  border:1px solid #fff;
+  background:#000;
+  color:#fff;
+  cursor:pointer;
+}
 
-/* Grid foto */
+/* ================= HOUSE GRID ================= */
 .gridContainer{
   position:absolute;
-  top:10%;
+  top:8%;
   left:50%;
   transform:translateX(-50%);
   width:92%;
   max-width:420px;
-  display:flex;
-  flex-direction:column;
-  gap:12px;
 }
-.gridTitle{
-  font-size:22px;
-  font-weight:bold;
-  margin-bottom:12px;
+.gridTitle{font-size:22px;margin-bottom:12px}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:8px;
 }
-.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:8px;}
-.slot{background:#f2f2f2;border-radius:8px;overflow:hidden;aspect-ratio:1/1;box-shadow:0 8px 18px rgba(0,0,0,.7);
-       opacity:0; transform:translateY(20px); animation:fadeUp 0.6s forwards;}
-.slot img{width:100%;height:100%;object-fit:cover;}
-
-/* Animasi foto */
-@keyframes fadeUp{
-  to{opacity:1; transform:translateY(0);}
+.slot{
+  aspect-ratio:1/1;
+  border-radius:8px;
+  overflow:hidden;
+  background:#eee;
+  opacity:0;
+  transform:translateY(20px);
+  animation:fadeUp .6s forwards;
 }
+.slot img{width:100%;height:100%;object-fit:cover}
+@keyframes fadeUp{to{opacity:1;transform:none}}
 
-/* Caption di bawah foto */
-.captionWrap{margin-top:12px;}
-.caption{font-size:14px;line-height:1.5;min-height:42px;margin-bottom:12px;}
-.playCaption{width:44px;height:44px;border-radius:50%;border:1px solid #fff;background:#000;color:#fff;font-size:18px;cursor:pointer;}
-
-/* ================= FIREWORK ================= */
-.shell{
+/* ================= SPECIAL LETTER ================= */
+.letterWrap{
   position:absolute;
-  bottom:0;
-  width:6px;
-  height:6px;
-  background:var(--main);
-  border-radius:50%;
-  animation:launch 1.1s linear forwards;
-  z-index:5;
+  inset:0;
+  padding:80px 18px 40px;
+  overflow-y:auto;
 }
-@keyframes launch{
-  to{transform:translateY(-80vh);opacity:0;}
+.letterGrid{
+  display:grid;
+  grid-template-columns:repeat(auto-fill,minmax(110px,1fr));
+  gap:14px;
 }
-.spark{
-  position:absolute;
-  width:4px;
-  height:4px;
-  background:var(--main);
-  border-radius:50%;
-  animation:explode 1s ease-out forwards;
-  z-index:5;
+.letterItem{
+  border-radius:10px;
+  overflow:hidden;
+  opacity:0;
+  transform:scale(.85);
+  animation:zoomIn .6s forwards;
 }
-@keyframes explode{
-  to{
-    transform:translate(var(--x),var(--y));
-    opacity:0;
-  }
+.letterItem img{
+  width:100%;
+  height:140px;
+  object-fit:cover;
+}
+@keyframes zoomIn{
+  to{opacity:1;transform:scale(1)}
 }
 </style>
 </head>
+
 <body>
+
 <!-- MENU -->
 <div id="menu">
-  <div class="titleMenu" id="animatedTitle"></div>
-  <div class="captionMenu">Yess, this is your special day, I made this just for you cuzz today is your birthday &lt;3</div>
+  <div class="titleMenu">
+    <span>Happy Birthday</span>
+    <span>SILE !!</span>
+  </div>
+
+  <div class="captionMenu">
+    yess this is your special day, i made this just for you cuzz today is your birthday &lt;3
+  </div>
 
   <div class="house" style="color:#ff3b3b" onclick="openHouse('gryffindor')">Gryffindor</div>
   <div class="house" style="color:#4facff" onclick="openHouse('ravenclaw')">Ravenclaw</div>
   <div class="house" style="color:#ffd34a" onclick="openHouse('hufflepuff')">Hufflepuff</div>
   <div class="house" style="color:#2aff7a" onclick="openHouse('slytherin')">Slytherin</div>
+
+  <!-- SPECIAL LETTER BUTTON -->
+  <div class="specialBtn" onclick="openLetter()">💌 Special Letter</div>
 </div>
 
 <div id="container"></div>
 
 <script>
-// ================= ANIMASI HURUF ==================
-const titleText = "Happy Birthday SILE !!";
-const animatedTitle = document.getElementById("animatedTitle");
-titleText.split("").forEach(char=>{
-  const span = document.createElement("span");
-  span.textContent = char;
-  animatedTitle.appendChild(span);
-});
-
-// ================== DATA HOUSE ==================
-var houses = {
-  gryffindor:{ color:"#ff3b3b", title:"Happy Birthday My Girlfriend!!", caption:"Thank you for being a part of my life, thank you for growing well, thank you for always being the source of my happiness ❤️", music:"gryffindor.mpeg", photos:["g1.jpeg","g2.jpeg","g3.jpeg","g4.jpeg","g5.jpeg","g6.jpeg","g7.jpeg","g8.jpeg","g9.jpeg"] },
-  ravenclaw:{ color:"#4facff", title:"Happy Birthday My Smart Angel!!", caption:"I hope that on this special day you are surrounded by happiness, filled with joy, and blessed with love 💙", music:"ravenclaw.mpeg", photos:["r1.jpeg","r2.jpeg","r3.jpeg","r4.jpeg","r5.jpeg","r6.jpeg","r7.jpeg","r8.jpeg","r9.jpeg"] },
-  hufflepuff:{ color:"#ffd34a", title:"Happy Birthday My Sweetheart!!", caption:"You deserve the world, and I’ll always love you. I’m grateful for everything you do, and thankful to have a girlfriend like you💛", music:"hufflepuff.mpeg", photos:["h1.jpeg","h2.jpeg","h3.jpeg","h4.jpeg","h5.jpeg","h6.jpeg","h7.jpeg","h8.jpeg","h9.jpeg"] },
-  slytherin:{ color:"#2aff7a", title:"Happy Birthday My Love!!", caption:"you're my four leaf clover🍀💚", music:"slytherin.mpeg", photos:["s1.jpeg","s2.jpeg","s3.jpeg","s4.jpeg","s5.jpeg","s6.jpeg","s7.jpeg","s8.jpeg","s9.jpeg"] }
+const houses={
+ gryffindor:{title:"Happy Birthday My Girlfriend",photos:["g1.jpeg","g2.jpeg","g3.jpeg","g4.jpeg","g5.jpeg","g6.jpeg","g7.jpeg","g8.jpeg","g9.jpeg"]},
+ ravenclaw:{title:"Happy Birthday My Love",photos:["r1.jpeg","r2.jpeg","r3.jpeg","r4.jpeg","r5.jpeg","r6.jpeg","r7.jpeg","r8.jpeg","r9.jpeg"]},
+ hufflepuff:{title:"Happy Birthday Sweetheart",photos:["h1.jpeg","h2.jpeg","h3.jpeg","h4.jpeg","h5.jpeg","h6.jpeg","h7.jpeg","h8.jpeg","h9.jpeg"]},
+ slytherin:{title:"Happy Birthday My Queen",photos:["s1.jpeg","s2.jpeg","s3.jpeg","s4.jpeg","s5.jpeg","s6.jpeg","s7.jpeg","s8.jpeg","s9.jpeg"]}
 };
 
-var audio, typing, fwInterval;
-
-// ================== TYPING ==================
-function typeText(el,text){
-  el.textContent="";
-  clearInterval(typing);
-  var i=0;
-  typing=setInterval(function(){
-    el.textContent+=text[i];
-    i++;
-    if(i>=text.length) clearInterval(typing);
-  },35);
-}
-
-// ================== OPEN HOUSE ==================
+/* ================= HOUSE ================= */
 function openHouse(h){
-  document.getElementById("menu").style.display="none";
-  document.getElementById("container").innerHTML="";
-  if(audio) audio.pause();
-  clearInterval(fwInterval);
+ document.getElementById("menu").style.display="none";
+ document.getElementById("container").innerHTML="";
 
-  var c = houses[h];
-  document.body.style.setProperty("--main",c.color);
+ let slots="";
+ houses[h].photos.forEach((p,i)=>{
+  slots+=`<div class="slot" style="animation-delay:${i*0.1}s"><img src="${p}"></div>`;
+ });
 
-  var slots = "";
-  c.photos.forEach(function(p, idx){
-    slots+='<div class="slot" style="animation-delay:'+ (idx*0.1) +'s"><img src="'+p+'"></div>';
-  });
-
-  var slide = document.createElement("div");
-  slide.className="slide active";
-  slide.innerHTML=`
-    <div class="bg"></div>
-    <button class="back" onclick="goBack()">⬅ Back</button>
-    <div class="gridContainer">
-      <div class="gridTitle"></div>
-      <div class="grid">${slots}</div>
-      <div class="captionWrap">
-        <div class="caption"></div>
-        <button class="playCaption" onclick="playCaption('${h}')">&lt;3</button>
-      </div>
-    </div>
-  `;
-  slide.dataset.title = c.title;
-  slide.dataset.caption = c.caption;
-  document.getElementById("container").appendChild(slide);
-
-  audio = new Audio(c.music);
-  audio.loop = true;
-  audio.play();
-
-  // ================= FIREWORK ==================
-  fwInterval = setInterval(function(){
-    const shell = document.createElement("div");
-    shell.className="shell";
-    shell.style.left=Math.random()*100+"%";
-    slide.appendChild(shell);
-
-    setTimeout(function(){
-      for(let i=0;i<20;i++){
-        const s=document.createElement("div");
-        s.className="spark";
-        s.style.left=shell.style.left;
-        s.style.bottom="80vh";
-        s.style.setProperty("--x",(Math.random()*200-100)+"px");
-        s.style.setProperty("--y",(Math.random()*200-100)+"px");
-        slide.appendChild(s);
-        setTimeout(()=>s.remove(),1000);
-      }
-      shell.remove();
-    },1100);
-  },600);
+ document.getElementById("container").innerHTML=`
+ <div class="page active">
+  <button class="back" onclick="goBack()">⬅ Back</button>
+  <div class="gridContainer">
+    <div class="gridTitle">${houses[h].title}</div>
+    <div class="grid">${slots}</div>
+  </div>
+ </div>`;
 }
 
-// ================== PLAY CAPTION ==================
-function playCaption(h){
-  var slide = document.querySelector(".slide.active");
-  var titleEl = slide.querySelector(".gridTitle");
-  var captionEl = slide.querySelector(".caption");
+/* ================= SPECIAL LETTER ================= */
+function openLetter(){
+ document.getElementById("menu").style.display="none";
+ document.getElementById("container").innerHTML="";
 
-  typeText(titleEl, slide.dataset.title);
-  setTimeout(function(){
-    typeText(captionEl, slide.dataset.caption);
-  }, slide.dataset.title.length*35 + 300);
+ const photos=[
+  "l1.jpeg","l2.jpeg","l3.jpeg","l4.jpeg","l5.jpeg",
+  "l6.jpeg","l7.jpeg","l8.jpeg","l9.jpeg","l10.jpeg",
+  "l11.jpeg","l12.jpeg"
+ ];
+
+ let items="";
+ photos.forEach((p,i)=>{
+  items+=`
+   <div class="letterItem" style="animation-delay:${i*0.08}s">
+     <img src="${p}">
+   </div>`;
+ });
+
+ document.getElementById("container").innerHTML=`
+ <div class="page active">
+   <button class="back" onclick="goBack()">⬅ Back</button>
+   <div class="letterWrap">
+     <div class="letterGrid">${items}</div>
+   </div>
+ </div>`;
 }
 
-// ================== GO BACK ==================
 function goBack(){
-  document.getElementById("container").innerHTML="";
-  document.getElementById("menu").style.display="flex";
-  if(audio) audio.pause();
-  clearInterval(fwInterval);
+ document.getElementById("container").innerHTML="";
+ document.getElementById("menu").style.display="flex";
 }
 </script>
+
 </body>
 </html>
