Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ body{
 <div id="menu">
   <div class="titleMenu" id="animatedTitle"></div>
   <div class="captionMenu">
-    Yess, this is your special day, I made this just for you cuzz today is your birthday &lt;3
+    Yess, this is your special day!! I made this just for you cuzz today is your birthday &lt;3
   </div>
 
   <div class="house" style="color:#ff3b3b" onclick="openHouse('gryffindor')">Gryffindor</div>
@@ -283,4 +283,5 @@ function goBack(){
 </script>
 </body>
 </html>
+
 
